Adding documentation improvements
